# trustid_image_processing_grpc

./: CMakeLists.txt  common.cmake  common.h  grpc-simpleclient.cc  grpc-simpleserver.cc  trustid.proto
.devcontainer/: Dev.Dockerfile  Dockerfile  Prod.Dockerfile  devcontainer.json
